--- a/index.html
+++ b/index.html
@@ -2,32 +2,46 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Start</title>
+	<title>Cup Planes</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<link rel="icon" href="favicon.png"/>
-	<link rel="stylesheet" href="css/normalize.css" />
-	<link rel="stylesheet" href="css/layout.css" />
+	<link rel="icon" href="favicon.ico"/>
 	<link rel="stylesheet" href="css/style.css" />
-
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,300' rel='stylesheet' type='text/css'>
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
-</head>
-<body>
-	<header class="ba-header">
-
-	</header>
-	<main role="main" >
-
-	</main>
-	<footer class="ba-footer">
-
-	</footer>
-	<script src="js/main.js"></script>
-</body>
-</html>
+		<![endif]-->
+	</head>
+	<body>
+		<main role="main" >
+			<section>
+				<div class="ba-container">
+					<div class="ba-flex__container">
+						<div class="ba-flex__el">
+							<h3>$2</h3>
+							<img src="img/bronze.png" alt="bronze">
+							<h2>Bronze</h2>
+							<p>any cup of coffee<br>until $3</p>
+						</div>
+						<div class="ba-flex__el ba-flex__el--gold">
+							<h3>$3</h3>
+							<img src="img/gold.png" alt="gold">
+							<h2>Gold</h2>
+							<p>any cup of coffee<br>until $5</p>
+						</div>
+							<div class="ba-flex__el">
+							<h3>$2.5</h3>
+							<img src="img/silver.png" alt="silver">
+							<h2>Silver</h2>
+							<p>any cup of coffee<br>until $4</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+		<script src="js/main.js"></script>
+	</body>
+	</html>
